Write news service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     //CardView
     implementation("androidx.cardview:cardview:1.0.0")
 
+    implementation("org.modelmapper.modelmapper:3.0.0")
+
 
 }
